--- a/views/creer_mission.html
+++ b/views/creer_mission.html
@@ -77,8 +77,8 @@
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-md-offset-3">
-                          <button type="submit" class="btn btn-primary">Cancel</button>
-                          <button id="send" type="submit" class="btn btn-success">Submit</button>
+                          <button type="submit" class="btn btn-warning">Annuler </button>
+                          <button id="send" type="submit" class="btn btn-success">Créer la mission</button>
                         </div>
                       </div>
                     </form>
@@ -99,9 +99,7 @@
     <script src="../vendors/moment/min/moment.min.js"></script>
     <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="../vendors/switchery/dist/switchery.min.js"></script>
-
-
-    <script type="text/javascript">
+     <script type="text/javascript">
 
         $(document).ready(function(){
 
@@ -110,12 +108,19 @@
           singleClasses: "picker_4"
         }, function(start, end, label) {
         console.log(start.toISOString(), end.toISOString(), label);
-      });
 
+      });
+      if ($(".js-switch")[0]) {
+        var elems = Array.prototype.slice.call(document.querySelectorAll('.js-switch'));
+        elems.forEach(function (html) {
+            var switchery = new Switchery(html, {
+                color: '#26B99A'
+            });
+        });
+      }
 
         });
     </script>
-
 	
   </body>
 </html>
