--- a/views/home.html
+++ b/views/home.html
@@ -8,9 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Plume </title>
-
-
-
     <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -21,7 +18,7 @@
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.min.css" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../javascripts/jquery.js"></script>
 
      <script>
 
@@ -414,9 +411,7 @@
 
         <!-- footer content -->
         <footer>
-          <div class="pull-right">
-            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
-          </div>
+          
           <div class="clearfix"></div>
         </footer>
         <!-- /footer content -->
