--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.min.css" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../javascripts/jquery.js"></script>
 
   </head>
 
