--- a/views/home.html
+++ b/views/home.html
@@ -37,7 +37,7 @@
              var collaborateurs = JSON.parse(data).data;
              collaborateurs.forEach(function (element) {
                $("#liste-collaborateurs").append('<tr>' +
-                       ' <td>' + firstToUpperCase(element.nom.toLowerCase()) + '</td>' +
+                       ' <td>' + firstToUpperCase(element.nom.toLowerCase() ) + '</td>' +
                        '<td>' + firstToUpperCase(element.prenom.toLowerCase()) + '</td>' +
                        '<td>' + element.service.nom + '</td>' +
                        '<td>' + element.mail + '</td>' +
@@ -85,7 +85,7 @@
            });
          }
          function loadDemandeConge() {
-           $('#pageInterne').load('demandeConge.html ');
+           $('#pageInterne').load('demandeConge.html');
          }
          function loadDemandeNFrais() {
            $('#pageInterne').load('demandeNFrais.html');
@@ -162,8 +162,9 @@
                   <li><a><i class="fa fa-suitcase"></i> Congé <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a  onclick="loadCalendar()">Calendrier congé</a></li>
-                      <li><a onclick="loadCongesDetail()">En detail</a></li>
+                      <li><a onclick="loadCongesDetail()">Mes conges</a></li>
                       <li><a onclick="loadDemandeConge()"> Nouvelle demande</a></li>
+                      <li class="validation-conges"><a onclick="loadValidationCongés()">Congés à valider</a></li>
                     </ul>
                   </li>
 
@@ -419,12 +420,15 @@
     $(document).ready(function () {
       $('.admin-view').each(function(){
         $( this ).hide();
-      })
+      });
+        $('.validation-conges').hide();
+      
       function firstToUpperCase( str ) {
         return str.substr(0, 1).toUpperCase() + str.substr(1);
       }
       $.get("/name", function(data, status){
           var profile = JSON.parse(data);
+          console.log()
           $('.profile-name').each(function() {
             $(this).html(firstToUpperCase(profile.prenom.toLowerCase()) + " " + firstToUpperCase(profile.nom.toLowerCase()));
             //console.log(JSON.stringify(profile));
@@ -434,6 +438,10 @@
               $(this).show();
             });
           }
+
+          if(profile.service.nom == "RH" || profile.role.nom =="Chef de service") 
+            $('.validation-conges').show();
+            
       });
         //alert("Data: " + data + "\nStatus: " + status);
     });
