--- a/views/home.html
+++ b/views/home.html
@@ -89,7 +89,7 @@
          }
 
          function loadMesNFrais() {
-            $('#pageInterne').load('allNotes_de_frais.html');
+            $('#pageInterne').load('notes_de_frais.html');
         }
          function loadCongesDetail() {
            $('#pageInterne').load('conges.html');
