--- a/views/demandeAvance.html
+++ b/views/demandeAvance.html
@@ -1,61 +1,39 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
+ <!DOCTYPE html>
+ <html lang="en">
+
+ <!-- Datatables -->
+ <link href="../vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+ <link href="../vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
+ <link href="../vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet">
+ <link href="../vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet">
+ <link href="../vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet">
+ <link href="../stylesheets/monthpicker.css" rel="stylesheet" type="text/css">
+
+ <!-- page content -->
 
 
-    <!-- Bootstrap -->
-    <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!-- NProgress -->
+<!-- POPUP ADD AVANCE -->
 
-    <link href="../vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+ <div class="modal fade" id="addForm" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" style="width: 800px !important; ">
+      <div class="modal-header">
 
-    <link href="../vendors/dropzone/dist/min/dropzone.min.css" rel="stylesheet">
-
-    <link href="../vendors/switchery/dist/switchery.min.css" rel="stylesheet">
-
-    <link href="../vendors/select2/dist/css/select2.min.css" rel="stylesheet">
-
-
-    <!-- Custom Theme Style -->
-    <link href="../build/css/custom.min.css" rel="stylesheet">
-  </head>
-
-
-
-  <!-- page content -->
-  <div class="">
-    <div class="page-title">
-      <div class="title_left">
-        <h3>Demande d'avance </h3>
-      </div>
-
-
-      <div class="title_right">
-        <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Chercher</button>
-            </span>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span
+              class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+              <div class="panel-title text-center"><i class="glyphicon glyphicon-plus"></i>&nbsp;Ajouter une Avance
+              </div>
+            </div>
           </div>
+
+
         </div>
-      </div>
-    </div>
-    <div class="clearfix"></div>
-
-    <div class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="x_panel">
-          <div class="x_title">
 
 
-            <div class="clearfix"></div>
-          </div>
-          <div class="x_content">
 
-            <form class="form-horizontal form-label-left" novalidate>
+ <form class="form-horizontal form-label-left" novalidate>
 
              <div id="ligneDeFrais"> 
 
@@ -160,58 +138,279 @@
 
           </form>
 
+  </div>
+  <!-- /.modal-content -->
+</div>
+<!-- /.modal-dialog -->
+</div>
 
 
 
 
+
+<div class="">
+  <div class="page-title">
+    <div class="page-title">
+      <div class="title_left">
+        <h3>Notes de frais</h3>
+
+
+
+        <div class="item form-group">
+          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Du Mois: </label>
+          
+          <div class="input-prepend input-group col-md-6 col-sm-6 col-xs-12">
+            <span class="add-on input-group-addon"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
+            <input type="text" style="width: 200px" name="moisNf" id="moisNf" class="form-control" value="Janvier">
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+      </div>
+
+
+
+         <div class="title_right">
+        <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Statut : </label>
+        <label class="control-label col-md-6 col-sm-6 col-xs-12" for="name">Brouillon </label>
         </div>
       </div>
     </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+
+<!-- N Frais Tableau -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="x_panel">
+          <div class="x_title">
+            <h2>Avances de la note de frais du mois de <b>janvier 2016 </b><small></small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+              <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+              </li>
+              <li class="dropdown">
+
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+
+              </li>
+              <li><a class="close-link"><i class="fa fa-close"></i></a>
+              </li>
+            </ul>
+
+            <div class="clearfix"></div>
+          </div>
+          <div class="x_content">
+
+            <table id="datatable-buttons" class="table table-striped table-bordered">
+
+              <thead>
+
+                <tr>
+                  <th>Mission</th>
+                  <th>catégorie frais</th>
+                  <th>Justificatif</th>
+                  <th></th>
+                  <th>operation</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table> 
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
   </div>
-</div>
-
-<!-- /page content -->
 
 
+  
+  
+  <!-- /page content -->
+
+  <!-- Datatables -->
+  <script src="../vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+  <script src="../vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+  <script src="../vendors/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+  <script src="../vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
+  <script src="../vendors/datatables.net-buttons/js/buttons.flash.min.js"></script>
+  <script src="../vendors/datatables.net-buttons/js/buttons.html5.min.js"></script>
+  <script src="../vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
+  <script src="../vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js"></script>
+  <script src="../vendors/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
+  <script src="../vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="../vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
+  <script src="../vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
+  <script src="../vendors/jszip/dist/jszip.min.js"></script>
+  <script src="../vendors/pdfmake/build/pdfmake.min.js"></script>
+  <script src="../vendors/pdfmake/build/vfs_fonts.js"></script>
+  <script src="../javascripts/monthpicker.min.js"></script>
 
 
 
 
-<!-- validator -->
-<script src="../vendors/validator/validator.js"></script>
-<!-- bootstrap-daterangepicker -->
-<script src="../vendors/moment/min/moment.min.js"></script>
-
-<script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-
-<script src="../vendors/dropzone/dist/min/dropzone.min.js"></script>
-
-<script src="../vendors/switchery/dist/switchery.min.js"></script>
-
-<script type="text/javascript">
-  var nbr = 0 ;
-  function addInput(){
-    var inputs = $('#inputs')
-    if(nbr ==0){
-      inputs.empty();
-      inputs.innerHTML = "";
-    }
-    nbr++;
+  <script type="text/javascript">
+    var nbr = 0 ;
+    function addInput(){
+      var inputs = $('#inputs')
+      if(nbr ==0){
+        inputs.empty();
+        inputs.innerHTML = "";
+      }
+      nbr++;
 
       // var amount = $('#amount').val();
       
       // inputs.innerHTML = "";
       // for(i = 0; i < nbr; i++) {
         // inputs.append('<input type="text" class="control-label col-md-6 col-sm-12 col-xs-12 name="input[' + nbr + ']" /> ');
-        inputs.append(' <div class="ln_solid"></div>  <div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Mission<span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <select id = "mission'+nbr+'" name = "mission'+nbr+'" class="form-control">                    <option>Mission1</option>                    <option>Mission2</option>                    <option>Mission3</option>                  </select>                </div>              </div><div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Typologie de Frais<span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <select class="form-control" id = "typologie'+nbr+'" name = "typologie'+nbr+'">                    <option>Transport</option>                    <option>Restaurant</option>                    <option>Hotel</option>                  </select>                </div>              </div>              <div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Descriptif  <span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <input id = "descriptif'+nbr+'"  class="form-control col-md-7 col-xs-12" data-validate-length-range="5" data-validate-words="1" name = "name'+nbr+'" placeholder="" required="required" type="text">                </div>              </div>              <div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Somme  <span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <input id = "somme'+nbr+'" class="form-control col-md-7 col-xs-12" data-validate-length-range="5" data-validate-words="1" name = "somme'+nbr+'" placeholder="En euros" required="required" type="text">                               </div>              </div>');
+        inputs.append('  <div class="ln_solid"></div> <div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Mission<span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <select id = "mission'+nbr+'" name = "mission'+nbr+'" class="form-control">                    <option>Mission1</option>                    <option>Mission2</option>                    <option>Mission3</option>                  </select>                </div>              </div><div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Typologie de Frais<span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <select class="form-control" id = "typologie'+nbr+'" name = "typologie'+nbr+'">                    <option>Transport</option>                    <option>Restaurant</option>                    <option>Hotel</option>                  </select>                </div>              </div>              <div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Descriptif  <span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <input id = "descriptif'+nbr+'"  class="form-control col-md-7 col-xs-12" data-validate-length-range="5" data-validate-words="1" name = "name'+nbr+'" placeholder="" required="required" type="text">                </div>              </div>              <div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Somme  <span class="required">*</span>                </label>                <div class="col-md-6 col-sm-6 col-xs-12">                  <input id = "somme'+nbr+'" class="form-control col-md-7 col-xs-12" data-validate-length-range="5" data-validate-words="1" name = "somme'+nbr+'" placeholder="En euros" required="required" type="text">                 </div>              </div>              <div class="item form-group">                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Justificatif                   </label>                <div class="col-md-4 col-sm-6 col-xs-12 checkbox">                  <label>                    <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" id = "file'+nbr+'" name = "file'+nbr+'" >                  </label>                </div>                <div class="col-md-4 col-sm-6 col-xs-12 checkbox">                  <div class="item form-group">                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Justificatif perdu:                       </label>                    <div class="col-md-4 col-sm-6 col-xs-12 checkbox">                      <label>                        <input type="checkbox" class="js-switch"  />                       </label>                    </div>                  </div>                </div>              </div>');
       // }
     }
 
 
+    $(document).ready(function(){
 
+      var handleDataTableButtons = function() {
+        if ($("#datatable-buttons").length) {
+          $("#datatable-buttons").DataTable({
+            dom: "Bfrtip",
+            buttons: [
+            {
+              text : "<span class='fa fa-plus'></span> Ajouter une Avance",
+              action : function () {
+
+                setTimeout(
+                  function () {
+
+                    $('#addForm').modal({backdrop: 'static', keyboard: true})
+
+                  }, 500)
+              }
+
+
+            },
+
+            ],
+            responsive: true
+          });
+        }
+      };
+
+
+  var handleDataTableButtons2 = function() {
+        if ($("#datatable2-buttons").length) {
+          $("#datatable2-buttons").DataTable({
+            dom: "Bfrtip",
+            buttons: [
+            {
+              text : "<span class='fa fa-plus'></span> Ajouter une ligne",
+              action : function () {
+
+                setTimeout(
+                  function () {
+
+                    $('#addForm2').modal({backdrop: 'static', keyboard: true})
+
+                  }, 500)
+              }
+
+
+            },
+
+            ],
+            responsive: true
+          });
+        }
+      };
+
+      TableManageButtons = function() {
+        "use strict";
+        return {
+          init: function() {
+            handleDataTableButtons();
+          }
+        };
+      }();
+
+       TableManageButtons2 = function() {
+        "use strict";
+        return {
+          init: function() {
+            handleDataTableButtons2();
+          }
+        };
+      }();
+
+      $('#datatable').dataTable();
+
+      $('#datatable-keytable').DataTable({
+        keys: true
+      });
+
+      $('#datatable-responsive').DataTable();
+
+      $('#datatable-scroller').DataTable({
+        ajax: "js/datatables/json/scroller-demo.json",
+        deferRender: true,
+        scrollY: 380,
+        scrollCollapse: true,
+        scroller: true
+      });
+
+      $('#datatable-fixed-header').DataTable({
+        fixedHeader: true
+      });
+
+      var $datatable = $('#datatable-checkbox');
+
+      $datatable.dataTable({
+        'order': [[ 1, 'asc' ]],
+        'columnDefs': [
+        { orderable: false, targets: [0] }
+        ]
+      });
+      $datatable.on('draw.dt', function() {
+        $('checkbox input').iCheck({
+          checkboxClass: 'icheckbox_flat-green'
+        });
+      });
+
+      TableManageButtons.init();
+      TableManageButtons2.init();
+    });
+
+
+
+
+    $('#moisNf').Monthpicker();
   </script>
+
 
 
 
 </body>
 </html>
+
+
+
